@@ -86,6 +86,7 @@ export(flexsurvspline)
 export(fmixmsm)
 export(fmsm)
 export(fss)
+export(get_basepars)
 export(glance)
 export(hexp)
 export(hgamma)
